FIX: Button alignment on messages

--- a/app/assets/stylesheets/desktop/user.scss
+++ b/app/assets/stylesheets/desktop/user.scss
@@ -86,8 +86,11 @@
   }
 }
 .user-additional-controls {
-  button {
+  display: flex;
+  flex-wrap: wrap;
+  .single-select-header, button {
     margin-bottom: 1em;
+    margin-right: 0.75em;
   }
 }
 
